[package]
name = "express"
version = "0.1.0"
authors = ["Theodore <theopaon@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
crossbeam-channel = "0.3.6"
dirs = "1.0.4"
futures = "0.1.25"
rayon = "1.0.3"
reqwest = "0.9.5"
serde = "1"
serde_derive = "1"
serde_json = "1"
tokio = "0.1.13"
walkdir = "2"
